--- a/marid-docs/marid/struct.Composer.html
+++ b/marid-docs/marid/struct.Composer.html
@@ -45,14 +45,19 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-36' class='srclink' href='../src/marid/composer.rs.html#11-14' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-91' class='srclink' href='../src/marid/composer.rs.html#13-17' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct Composer&lt;R&gt; {
     // some fields omitted
-}</pre><div class='docblock'><p>The Composer will start each runner inside of its own thread when the run() function
+}</pre><div class='docblock'><p>The Composer type.</p>
+
+<p>The Composer will start each runner inside of its own thread when the run() function
 is called. The current behavior is an ordered setup/run, but in the future a parallel
 startup mode will be offered.</p>
-</div><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl&lt;R&gt; <a class='struct' href='../marid/struct.Composer.html' title='marid::Composer'>Composer</a>&lt;R&gt;</code></h3><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>(runners: <a class='struct' href='https://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;R&gt;) -&gt; <a class='struct' href='../marid/struct.Composer.html' title='marid::Composer'>Composer</a>&lt;R&gt;</code></h4>
+</div><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl&lt;R&gt; <a class='struct' href='../marid/struct.Composer.html' title='marid::Composer'>Composer</a>&lt;R&gt;</code></h3><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>(runners: <a class='struct' href='https://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;R&gt;, error_signal: <a class='enum' href='../marid/enum.Signal.html' title='marid::Signal'>Signal</a>) -&gt; <a class='struct' href='../marid/struct.Composer.html' title='marid::Composer'>Composer</a>&lt;R&gt;</code></h4>
 <div class='docblock'><p>Creates a new Composer.</p>
+
+<p>The error_signal is the Signal that the Composer will send to
+runners when another runner in the group has finished with an error.</p>
 </div></div><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><code>impl <a class='trait' href='../marid/trait.Runner.html' title='marid::Runner'>Runner</a> for <a class='struct' href='../marid/struct.Composer.html' title='marid::Composer'>Composer</a>&lt;<a class='struct' href='https://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;<a class='trait' href='../marid/trait.Runner.html' title='marid::Runner'>Runner</a> + <a class='trait' href='https://doc.rust-lang.org/nightly/core/marker/trait.Send.html' title='core::marker::Send'>Send</a>&gt;&gt;</code></h3><div class='impl-items'><h4 id='method.run' class='method'><code>fn <a href='../marid/trait.Runner.html#method.run' class='fnname'>run</a>(self: <a class='struct' href='https://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;Self&gt;, signals: <a class='struct' href='../marid/struct.Receiver.html' title='marid::Receiver'>Receiver</a>&lt;<a class='enum' href='../marid/enum.Signal.html' title='marid::Signal'>Signal</a>&gt;) -&gt; <a class='enum' href='https://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='https://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='type' href='../marid/type.MaridError.html' title='marid::MaridError'>MaridError</a>&gt;</code></h4>
 <h4 id='method.setup' class='method'><code>fn <a href='../marid/trait.Runner.html#method.setup' class='fnname'>setup</a>(&amp;mut self) -&gt; <a class='enum' href='https://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='https://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='type' href='../marid/type.MaridError.html' title='marid::MaridError'>MaridError</a>&gt;</code></h4>
 </div></section>
