--- a/marid-docs/marid/test_helpers/index.html
+++ b/marid-docs/marid/test_helpers/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-251' class='srclink' href='../../src/marid/test_helpers.rs.html#1-119' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-318' class='srclink' href='../../src/marid/test_helpers.rs.html#1-120' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>A testing module for Runner/Process traits.</p>
 
 <p>When implementing different pieces of this crate, it was expedient
@@ -53,6 +53,15 @@ to have some testing structs in place. This might also be useful for
 other developers who would want to ensure proper functionality.</p>
 </div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
+                    <tr class=' module-item'>
+                        <td><a class='struct' href='struct.TestError.html'
+                               title='marid::test_helpers::TestError'>TestError</a></td>
+                        <td class='docblock short'>
+                             <p>Error type for testing</p>
+
+                        </td>
+                    </tr>
+                
                     <tr class=' module-item'>
                         <td><a class='struct' href='struct.TestProcess.html'
                                title='marid::test_helpers::TestProcess'>TestProcess</a></td>
