--- a/marid-docs/src/marid/lib.rs.html
+++ b/marid-docs/src/marid/lib.rs.html
@@ -81,11 +81,94 @@
 <span id="39">39</span>
 <span id="40">40</span>
 <span id="41">41</span>
+<span id="42">42</span>
+<span id="43">43</span>
+<span id="44">44</span>
+<span id="45">45</span>
+<span id="46">46</span>
+<span id="47">47</span>
+<span id="48">48</span>
+<span id="49">49</span>
+<span id="50">50</span>
+<span id="51">51</span>
+<span id="52">52</span>
+<span id="53">53</span>
+<span id="54">54</span>
+<span id="55">55</span>
+<span id="56">56</span>
+<span id="57">57</span>
+<span id="58">58</span>
+<span id="59">59</span>
+<span id="60">60</span>
+<span id="61">61</span>
+<span id="62">62</span>
+<span id="63">63</span>
+<span id="64">64</span>
+<span id="65">65</span>
+<span id="66">66</span>
+<span id="67">67</span>
+<span id="68">68</span>
+<span id="69">69</span>
+<span id="70">70</span>
+<span id="71">71</span>
+<span id="72">72</span>
+<span id="73">73</span>
+<span id="74">74</span>
+<span id="75">75</span>
+<span id="76">76</span>
+<span id="77">77</span>
+<span id="78">78</span>
+<span id="79">79</span>
+<span id="80">80</span>
+<span id="81">81</span>
+<span id="82">82</span>
+<span id="83">83</span>
+<span id="84">84</span>
 </pre><pre class='rust '>
 <span class='attribute'>#<span class='op'>!</span>[<span class='ident'>deny</span>(<span class='ident'>missing_docs</span>, <span class='ident'>dead_code</span>)]</span>
 <span class='doccomment'>//! Marid</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! A process orchestration library</span>
+<span class='doccomment'>//! A process orchestration library.</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! This library is influenced by [tedsuo&#39;s ifrit](https://github.com/tedsuo/ifrit), a similar</span>
+<span class='doccomment'>//! library for Golang.</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! The foundation of the library is built on the idea of a `Runner` trait, which</span>
+<span class='doccomment'>//! encapsulates a singular unit of work, e.g. a thread, which is has a long lifetime, potentially</span>
+<span class='doccomment'>//! forever. The `Process` is a trait that defines the actual running of one or more `Runner`</span>
+<span class='doccomment'>//! objects. Importantly, a `Process` defines the ability to wait for, and signal a</span>
+<span class='doccomment'>//! `Runner`.</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! # Examples</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! ```</span>
+<span class='doccomment'>//! use marid::{launch, Runner, Process, Composer, FnRunner, Signal};</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! let mut runner1 = Box::new(FnRunner::new(move |_sig| {</span>
+<span class='doccomment'>//!     // Do a bunch of work...</span>
+<span class='doccomment'>//!     Ok(())</span>
+<span class='doccomment'>//! })) as Box&lt;Runner + Send&gt;;</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! let mut runner2 = Box::new(FnRunner::new(move |_sig| {</span>
+<span class='doccomment'>//!     // Do a bunch of other work...</span>
+<span class='doccomment'>//!     Ok(())</span>
+<span class='doccomment'>//! })) as Box&lt;Runner + Send&gt;;</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! let composer = Composer::new(vec!(runner1, runner2), Signal::INT);</span>
+<span class='doccomment'>//! let signals = vec!(Signal::INT, Signal::ALRM);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Start all Runners in separate threads.</span>
+<span class='doccomment'>//! let process = launch(composer, signals);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Wait until all Runners have been setup.</span>
+<span class='doccomment'>//! assert!(process.ready().is_ok());</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Send a shutdown signal to all Runners.</span>
+<span class='doccomment'>//! process.signal(Signal::INT);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Wait until all Runners have finished.</span>
+<span class='doccomment'>//! assert!(process.wait().is_ok());</span>
+<span class='doccomment'>//! ```</span>
 <span class='attribute'>#[<span class='ident'>macro_use</span>]</span>
 <span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>chan</span>;
 <span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>chan_signal</span>;
@@ -93,6 +176,10 @@
 
 <span class='kw'>mod</span> <span class='ident'>traits</span>;
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>traits</span>::{<span class='ident'>Signal</span>, <span class='ident'>Sender</span>, <span class='ident'>Receiver</span>, <span class='ident'>Process</span>, <span class='ident'>Runner</span>};
+
+<span class='kw'>mod</span> <span class='ident'>thunk</span>;
+<span class='kw'>mod</span> <span class='ident'>fn_runner</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>fn_runner</span>::<span class='ident'>FnRunner</span>;
 
 <span class='kw'>mod</span> <span class='ident'>composer</span>;
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>composer</span>::<span class='ident'>Composer</span>;
@@ -104,10 +191,9 @@
 <span class='doccomment'>/// Error type for Marid Runners.</span>
 <span class='kw'>pub</span> <span class='kw'>type</span> <span class='ident'>MaridError</span> <span class='op'>=</span> <span class='ident'>Box</span><span class='op'>&lt;</span><span class='ident'>Error</span> <span class='op'>+</span> <span class='ident'>Send</span><span class='op'>&gt;</span>;
 
-<span class='doccomment'>/// This function will start the specified runner as well as listen on the specified</span>
-<span class='doccomment'>/// signals.</span>
+<span class='doccomment'>/// Launch the specified runner as well as listen on the specified signals.</span>
 <span class='doccomment'>///</span>
-<span class='doccomment'>/// # Warnings</span>
+<span class='doccomment'>/// # Safety</span>
 <span class='doccomment'>///</span>
 <span class='doccomment'>/// This must be called before any threads are spawned in the process to</span>
 <span class='doccomment'>/// ensure appropriate signal handling behavior.</span>
@@ -118,7 +204,7 @@
         <span class='ident'>chan_signal</span>::<span class='ident'>notify_on</span>(<span class='kw-2'>&amp;</span><span class='ident'>signal_send</span>, <span class='ident'>sig</span>);
     }
 
-    <span class='ident'>MaridProcess</span>::<span class='ident'>new</span>(<span class='ident'>Box</span>::<span class='ident'>new</span>(<span class='ident'>runner</span>), <span class='ident'>signal_send</span>, <span class='ident'>signal_recv</span>)
+    <span class='ident'>MaridProcess</span>::<span class='ident'>start</span>(<span class='ident'>Box</span>::<span class='ident'>new</span>(<span class='ident'>runner</span>), <span class='ident'>signal_send</span>, <span class='ident'>signal_recv</span>)
 }
 
 <span class='comment'>// TODO: Make this module more useable and document behavior.</span>
