--- a/marid-docs/src/marid/test_helpers.rs.html
+++ b/marid-docs/src/marid/test_helpers.rs.html
@@ -159,6 +159,7 @@
 <span id="117">117</span>
 <span id="118">118</span>
 <span id="119">119</span>
+<span id="120">120</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! A testing module for Runner/Process traits.</span>
 <span class='doccomment'>//!</span>
@@ -179,7 +180,8 @@
 }
 
 <span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Debug</span>, <span class='ident'>Eq</span>, <span class='ident'>PartialEq</span>, <span class='ident'>Clone</span>)]</span>
-<span class='kw'>struct</span> <span class='ident'>TestError</span>;
+<span class='doccomment'>/// Error type for testing</span>
+<span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>TestError</span>;
 
 <span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Display</span> <span class='kw'>for</span> <span class='ident'>TestError</span> {
     <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>fmt</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='ident'>fmt</span>::<span class='prelude-ty'>Result</span> {
